(executable
 (name main)
 (libraries core async bernard_j_ortcutt)
 (preprocess
  (pps ppx_jane)))

(rule
 (alias manual-test)
 (deps
  (:create-tables ../create_tables.sql)
  main.exe
  (:link link.json)
  (:subreddit subreddit.json))
 (action
  (progn
   (system "dropdb testing")
   (system "createdb testing")
   (system "psql -d testing -f %{create-tables}")
   (run ./main.exe -database testing -link %{link} -subreddit %{subreddit}))))
