(executable
 (name main)
 (libraries core core_unix.command_unix async bernard_j_ortcutt)
 (preprocess
  (pps ppx_jane ppx_jsonaf_conv)))

(rule
 (alias manual-test)
 (deps
  (:create-tables ../create_tables.sql)
  main.exe
  (:link link.json)
  (:subreddit subreddit.json))
 (action
  (progn
   (system "dropdb testing")
   (system "createdb testing")
   (system "psql -d testing -f %{create-tables}")
   (run ./main.exe -database postgresql:///testing -link %{link} -subreddit %{subreddit}))))
